# plex-shuffler-studio

./: .gitignore  AGENTS.md  BACKLOG.md  CHANGELOG.md  NOTES.md  PLAN.md  README.md  TASKS.md  config.example.json  pyproject.toml
plex_shuffler/: __init__.py  __main__.py  builder.py  cli.py  config.py  models.py  playlist.py  plex_auth.py  plex_client.py  query_builder.py  query_catalog.py  shuffle.py  utils.py  web.py  web_server.py
plex_shuffler/web/: app.js  index.html  styles.css
tests/: test_cli_loop_behavior.py  test_config_validation.py  test_plex_client_pagination.py  test_query_builder.py  test_query_catalog.py  test_shuffle.py  test_web_config.py  test_web_facets_api.py  test_web_options_api.py
